# stm32h743-nucleo-template

./: .gitignore  CMakeLists.txt  CMakePresetsPrototype.json  LICENSE.md  STM32H743ZITx_FLASH.ld  STM32H743ZITx_FLASH_DTCMRAM.ld  STM32H743ZITx_RAM.ld  stm32h743-nucleo-template.ioc
drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal_conf.h
drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_ll_utils.c
include/bsp_h743_nucleo/: bsp_h743_nucleo_def.h
include/bsp_h743_nucleo/button/: button.cpp  button.h
include/bsp_h743_nucleo/leds/: leds.cpp  leds.h
include/emb/: emb_algorithm.h  emb_circularbuffer.h  emb_core.cpp  emb_core.h  emb_def.h  emb_math.h  emb_queue.h  emb_string.h
include/emb/emb_interfaces/: emb_can.h  emb_gpio.h  emb_uart.h
include/emb/emb_test/: emb_algorithm_test.cpp  emb_test.h
include/emb/emb_testrunner/: emb_testrunner.h
include/emb/tests/: emb_algorithm_test.cpp  emb_math_test.cpp  emb_test.h
include/mcu_stm32h7/: mcu_def.h
include/mcu_stm32h7/adc/: mcu_adc.cpp  mcu_adc.h
include/mcu_stm32h7/can/: mcu_can.cpp  mcu_can.h
include/mcu_stm32h7/clock/: mcu_clock.cpp  mcu_clock.h
include/mcu_stm32h7/crc/: mcu_crc.cpp  mcu_crc.h
include/mcu_stm32h7/dma/: mcu_dma.cpp  mcu_dma.h
include/mcu_stm32h7/gpio/: mcu_gpio.cpp  mcu_gpio.h
include/mcu_stm32h7/system/: mcu_system.cpp  mcu_system.h
include/mcu_stm32h7/uart/: mcu_uart.cpp  mcu_uart.h
src/: main.cpp
src/cli/: cli_config.h  cli_escseq.cpp  cli_server.cpp  cli_server.h
src/cli/cmd/: cli_reboot.cpp  cli_sysctl.cpp  cli_sysinfo.cpp  cli_syslog.cpp  cli_uptime.cpp
src/cli/shell/: cli_shell.cpp  cli_shell.h
src/helpers/callbacks_adc/: callbacks_adc.cpp  callbacks_adc.h
src/settings/: settings.cpp  settings.h  settings_adc.cpp  settings_can.cpp  settings_uart.cpp
src/sys/sysconfig/: sysconfig.h  sysconfig_adc.cpp  sysconfig_can.cpp  sysconfig_uart.cpp
src/sys/sysinfo/: sysinfo.cpp  sysinfo.h
src/sys/syslog/: syslog.cpp  syslog.h
tests/: tests.cpp  tests.h
tests/mcu_stm32h7_test/: mcu_stm32h7_clock_test.cpp  mcu_stm32h7_gpio_test.cpp  mcu_stm32h7_test.h
